# practical-ml-class

./: .flake8  .gitignore  AGENT.md  CICD_SETUP.md  Makefile  README.md  config.txt  data.csv  main.py  make_sample_data.py  metrics.py  notes.txt  pyproject.toml  results.csv  ruff.toml  taxi_model_FINAL.py  taxi_model_old.py  test.py  utils.py
.github/workflows/: ci.yml
homeworks/: homework1.md
tests/: test_metrics.py
